fix: underline on mobile

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -22,7 +22,9 @@
 .navbar > ul > li > a {
   text-decoration: none !important;
   &:hover {
-    text-decoration: dotted underline var(--venom) !important;
+    text-decoration: underline;
+    text-decoration-color: var(--venom);
+    text-decoration-style: dotted;
   }
 }
 
